tests/baselines/reference/unusedMultipleParameters2InMethodDeclaration.errors.txt
tests/cases/compiler/unusedMultipleParameters2InMethodDeclaration.ts(3,20): error TS6133: Parameter 'person' has never been used.
tests/cases/compiler/unusedMultipleParameters2InMethodDeclaration.ts(3,53): error TS6133: Parameter 'person3' has never been used.
tests/cases/compiler/unusedMultipleParameters2InMethodDeclaration.ts(4,13): error TS6132: Variable 'unused' has never been used.


==== tests/cases/compiler/unusedMultipleParameters2InMethodDeclaration.ts (3 errors) ====
    
    class Dummy {
        public greeter(person: string, person2: string, person3: string) {
                       ~~~~~~~~~~~~~~
!!! error TS6133: Parameter 'person' has never been used.
                                                        ~~~~~~~~~~~~~~~
!!! error TS6133: Parameter 'person3' has never been used.
            var unused = 20;
                ~~~~~~
!!! error TS6132: Variable 'unused' has never been used.
            person2 = "dummy value";
        }
    }